# api

./: .env.sample  Dockerfile  README.rst  docker-compose.yml  pyproject.toml  start_server.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: article.py  authenticaion.py  authentication.py  comment.py  place.py  post.py  profile.py  tag.py  user.py
app/core/: config.py  jwt.py
app/db/: mongodb_utils.py
app/db/repositories/: profile_repository.py  user_repository.py
app/models/: dbmodel.py  place.py  post.py  profile.py  review.py  role.py  rwmodel.py  util.py
app/services/: article.py  authentication.py  comment.py  place.py  post.py  profile.py  shortcuts.py  tag.py  user.py
tests/: conftest.py
