[tool.poetry]
name = "hashtrip"
version = "0.1.0"
description = "Backend API app for hashtrip"
authors = ["rizanw <rzkandre@gmail.com>", "anggar <anggarwahyu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.11.5"
gunicorn = "^19.9"
fastapi = "^0.54.0"
pydantic = {version = "^1.2", extras = ["email"]}
passlib = {version = "^1.7",extras = ["bcrypt"]}
pyjwt = "^1.7"
alembic = "^1.0"
python-slugify = "^3.0"
Unidecode = "^1.0"
python-dotenv = "^0.10.1"
databases = "^0.2.1"
motor = "^2.0"


[tool.poetry.dev-dependencies]
pytest = "*"

[tool.black]
exclued = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | alembic
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

